Fixed collapsing month selection in datepicker

--- a/scss/components/forms/_datepicker.scss
+++ b/scss/components/forms/_datepicker.scss
@@ -118,6 +118,8 @@
         left: 0;
         right: 0;
         bottom: 0;
+        width: 100%;
+        height: 100%;
         text-align: center;
         background-color: $white;
         overflow-x: hidden;
@@ -128,13 +130,6 @@
         visibility: hidden;
         transition: opacity 0.4s ease, visibility 0.4s ease 0.4s;
         -webkit-transition: opacity 0.4s ease, visibility 0.4s ease 0.4s;
-        &.select-month,
-        &.select-year {
-            opacity: 1;
-            visibility: visible;
-            transition: opacity 0.4s ease, visibility 0.4s ease;
-            -webkit-transition: opacity 0.4s ease, visibility 0.4s ease;
-        }
         a, a:visited, a:focus {
             color: $font-color;
             font-weight: 300;
@@ -143,6 +138,12 @@
         a:hover {
             color: $primary-color;
         }
+    }
+    #calendar-select-months.select-month, #calendar-select-years.select-year {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.4s ease, visibility 0.4s ease;
+        -webkit-transition: opacity 0.4s ease, visibility 0.4s ease;
     }
 }
 
@@ -203,7 +204,7 @@ a.calendar-box:hover {
         font-size: 1.75rem;
     }
     #calendar {
-        #calendar-select-months, #previous-month, #next-month, #calendar-listed-date, .calendar-box, #calendar-footer a, #calendar-footer a:visited {
+        #calendar-select-months a, #calendar-select-years a, #previous-month, #next-month, #calendar-listed-date, .calendar-box, #calendar-footer a, #calendar-footer a:visited {
             line-height: 48px;
             height: 48px;
         }
